...
        )}
        screenOptions={{
          swipeEnabled: true,
          lazy: true,
        }}
      >
        <CustomerTabs.Screen name="Home" component={CustomerHomeStack} options={{ title: "Inicio" }} />
        <CustomerTabs.Screen name="Historial" component={ReservationsScreen} options={{ title: "Historial" }} />
        <CustomerTabs.Screen name="Lugares" component={SearchScreen} options={{ title: "Lugares" }} />
        <CustomerTabs.Screen name="Profile" component={ProfileScreen} options={{ title: "Perfil" }} />
      </CustomerTabs.Navigator>
    </View>
  );
...
