...
            label="Ciudad"
            name="city"
            value={formData.city}
            onChange={handleChange}
          />
          <ProfileInput
            label="Tipo de Documento"
            name="docType"
            value={formData.docType}
            onChange={handleChange}
          />
          <ProfileInput
            label="Número de Documento"
            name="verifyId"
            value={formData.verifyId}
            onChange={handleChange}
          />
          <ProfileInput
            label="Empresa / Razón Social"
...
