...
      body: "El valor del viaje fue superior al estimado.",
      email: "cliente2@correo.com",
      firstName: "Laura Gómez",
      check: true,
      imageResponse: "",
      details: "Se revisó el caso, reembolso aprobado.",
      fromResponse: "Correo",
    },
  ]);

  const [selectedComplain, setSelectedComplain] = useState<any>(null);
  const [details, setDetails] = useState("");
  const [fromResponse, setFromResponse] = useState("");
...
