...
    >
      {effectiveIsAuthenticated ? (
        <Stack.Group screenOptions={{ headerShown: false }}>
          <Stack.Screen name="HomeScreen" component={TabNavigator} />
          <Stack.Screen name="Search" component={SearchScreen} />
          <Stack.Screen name="Soporte" component={CustomerSupport} />
          <Stack.Screen name="Carnet" component={CarnetScreen} />
          <Stack.Screen name="Wallet" component={WalletDetails} />
          <Stack.Screen name="Myfamily" component={Myfamily} />
          <Stack.Screen name="BookingS" component={BookingScreen} />
          <Stack.Screen name="CarsEdit" component={carEditScreens} />
          <Stack.Screen name="CarsScreen" component={CarsScreen} />
          <Stack.Screen name="Booking" component={BookingCabScreen} />
...
